--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style/style.css">
     <title>Document</title>
 </head>
 
 <body>
+    <div class="control">
+        <h3>Шахматы</h3>
+        <div class="toggle">
+            <input type="checkbox" class="toggle__input" id="toggle-1">
+            <label class="toggle__control" for="toggle-1"></label>
+            <label class="toggle__label" for="toggle-1"></label>
+        </div>
+        <h3>Корзина</h3>
+    </div>
+    <div class="shah"></div>
+    <div class="cart">
+    </div>
 
-
-    <script src="js/lesson_4.js"></script>
+    <script src="js/lesson_5.js"></script>
 </body>
 
 </html>
