--- a/index.html
+++ b/index.html
@@ -41,12 +41,37 @@
             <div class="count-product"></div>
         </div>
     </header>
-    <div class="cart">
+    <section class="wrapper">
+        <div class="up-complite">
+            <div class="step step-active" data-set="1">Содержимое корзины</div>
+            <div class="step" data-set="2">Адрес доставки</div>
+            <div class="step" data-set="3">Способ оплаты</div>
+            <div class="step" data-set="4">Готово!</div>
 
-    </div>
-    <div class="shop">
+        </div>
+        <div class="cart">
+            <div class="adress">
+                <h3>Укажите Ваш адрес</h3>
+                <input type="text" name="adress" id="adress">
+            </div>
+            <div class="buy">
+                <h3>Способ оплаты</h3>
+                <select value="free">
+                    <option name="card" id="card">Карта</option>
+                    <option name="free" id="free">Бесплатно</option>
+                    <option name="body" id="body">Натурой</option>
+                </select>
+            </div>
+            <div class="complite">
+                <h3>Покупка оформлена</h3>
+                <p>Ожидайте ее в течении 8 лет, мы с Вами свяжемся</p>
+            </div>
+        </div>
 
-    </div>
+        <div class="shop">
+        </div>
+    </section>
+
 
     <script src="js/lesson_6.js"></script>
 </body>
